--- a/package.json
+++ b/package.json
@@ -24,5 +24,8 @@
     "build": "webpack -p",
     "react-dev": "webpack -d --watch",
     "server-dev": "nodemon server/index.js"
+  },
+  "devDependencies": {
+    "webpack-cli": "^2.0.14"
   }
 }
