--- a/package.json
+++ b/package.json
@@ -3,11 +3,14 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@types/d3": "^5.0.0",
     "babel-core": "^6.26.0",
     "babel-loader": "^7.1.4",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
     "body-parser": "^1.18.2",
+    "d3": "^5.0.0",
+    "d3-seating-chart": "^2.1.0",
     "express": "^4.16.3",
     "nodemon": "^1.17.3",
     "npm": "^5.8.0",
