--- a/package.json
+++ b/package.json
@@ -18,7 +18,10 @@
     "react-dom": "^16.2.0",
     "react-router": "^4.2.0",
     "react-router-dom": "^4.2.2",
+    "react-samy-svg": "^3.0.7",
     "react-scripts": "1.1.1",
+    "react-svg": "^2.2.16",
+    "svg-react-loader": "^0.4.5",
     "webpack": "^4.5.0"
   },
   "scripts": {
@@ -29,6 +32,7 @@
     "server-dev": "nodemon server/index.js"
   },
   "devDependencies": {
+    "react-svg-loader": "^2.1.0",
     "webpack-cli": "^2.0.14"
   }
 }
